--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ a {
                 </ul>
                 <div class="page" id="p1">
                    <section class="icon fa fa-bolt">  
-                       <img src = "https://mail.naver.com/read/image/?mailSN=9285&attachIndex=2&contentType=image/png&offset=1367&size=3306024&mimeSN=1590922090.941918.58192.63232&org=1&u=mun90505" width = "200px" height = "200px"/>
+                       <img src = "profile.png" width = "200px" height = "200px"/>
                     <span class = "title">구일문 <br> 한국외대16</span> <span class="hint"><br> 백엔드 개발자를 지망하는<br> 영문학도입니다.<br> 나쵸와 머스타드,<br> 위스키를 사랑합니다.</span></section>  
                 </div>
                 <div class="page" id="p2">
