--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ a {
                 <div class="page" id="p1">
                    <section class="icon fa fa-bolt">  
                    
-                    <span class = "title">Profile </span><span class ="school">구일문 / 한국외대16</span> <span class="hint"><br> 백엔드 개발자를 지망하는<br> 영문학도입니다.<br> 나쵸와 머스타드,<br> 위스키를 사랑합니다.</span></section>  
+                    <span class = "school">Profile </span><span class ="school">구일문 / 한국외대16</span> <span class="hint"><br> 백엔드 개발자를 지망하는<br> 영문학도입니다.<br> 나쵸와 머스타드,<br> 위스키를 사랑합니다.</span></section>  
                 </div>
                 <div class="page" id="p2">
                   <section class="icon fa fa-keyboard-o"><span class="title">관심 분야</span><span class="hint"> 자바 스프링과 <br> 파이썬의 장고를 공부하고 있습니다. </span></span></section>
