--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@ font-size: 27px;
 font-weight: bold;
 margin : 0px;
 padding: 0px;
-line-height : 2;
+line-height : 0.5em;
 }
+        
 ul {
   position: fixed;
   z-index: 1;
