--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ a {
                     <span class = "title">Profile </span> <span class ="school">구일문 / 한국외대16</span> <span class="hint"><br> 백엔드 개발자를 지망하는<br> 영문학도입니다.<br> 나쵸와 머스타드,<br> 위스키를 사랑합니다.</span></section>  
                 </div>
                 <div class="page" id="p2">
-                  <section class="icon fa fa-keyboard-o"><span class="title">관심 분야</span><br><span class="hint"> 자바 스프링과 <br> 파이썬의 장고를 공부하고 있습니다. </span></section>
+                  <section class="icon fa fa-keyboard-o"><span class="title">관심 분야</span><span class="school"> 자바 스프링과 <br> 파이썬의 장고를 공부하고 있습니다. </span></section>
                 </div>  
                 <div class="page" id="p3">
                   <section class="icon fa fa-rocket"><span class="title">영문학</span><span class="hint">
