--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ a {
                   </div>
                 <div class="page" id="p2">
                   <section class="icon fa fa-keyboard-o"><span class="title">Interests</span><span class="hint"> 자바 스프링과 <br> 파이썬의 장고를 공부하고 있습니다. <br> 
-                  최근 알고리즘 스터디를 <br>새로 시작했습니다. <br>아두이노의 구현도 매주 <br>새로 해보는 중입니다.</span></section>
+                  최근 알고리즘 스터디를 <br>새로 시작했습니다. <br>아두이노 프로젝트도 매주 <br>진행 중입니다.</span></section>
                 </div>  
                 <div class="page" id="p3">
                   <section class="icon fa fa-rocket"><span class="title">English Lit.</span><span class="hint">
