--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ a {
                 <div class="page" id="p3">
                   <section class="icon fa fa-rocket"><span class="title">English Lit.</span><span class="hint">
                    
-                    백엔드 개발자가 되고싶지만, <br> 그렇다고 영문과에 온 것을<br> 후회하는 건 아닙니다. <br> 영문학에선 <br> 인생을 배울 수 있으니까요.
+                    백엔드 개발자가 되고싶지만, <br> 그렇다고 영문과에 온 것을<br> 후회하는 건 아닙니다. <br> 영문학에선 <br> 인생을 배울 수 있거든요!
                     <br>요즘 감명깊게 읽은 책으로는 <br>사라 룰의'A Dead man's Cellphone' 이 있습니다. </span></div>
                 <div class="page" id="p4">
                   <section class="icon fa fa-dribbble">
