--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="designer" content="Alberto Hartzet">
     <meta name="programer" content="Alberto Hartzet">
     <meta name="author" content="Alberto Hartzet">
-    
-
+   
  
     <link rel="stylesheet" type = "text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css"/>
 
@@ -212,9 +211,10 @@ a {
 }
 
 .page#p1 .icon {
-  height: 600px;
-  width: 1000px;
+  height: 80%;
+  width: 40%;
   top : 20%;
+  left: 10%;
 }
 
 .page#p1 .icon {
